# ImmunoFoundation

./: .gitignore  CLAUDE.md  README.md  finetune_classifier.py  inspect_checkpoint.py  pyproject.toml  requirements.txt  test_dataloader.py  test_fullmodel.py  test_sequence.py  train.py
.claude/: settings.json
configs/: finetune_af3.yaml  finetune_classifier.yaml  train.yaml  train_af3.yaml  train_afdb.yaml  train_afdb_gvp.yaml  train_cancer.yaml  train_finetune_cedar_cancer.yaml  train_finetune_cedar_cancer_pooled.yaml  train_finetune_iedb.yaml  train_finetune_iedb_pooled.yaml  train_stage2.yaml  train_stage2_debug.yaml  train_stage2_no_checkpoint.yaml
data/: immunostruct_set.txt  immunostruct_test_set.txt  immunostruct_val_set.txt
immunofoundation/data/: ImmunoDataModule.py  ImmunoDataset.py
immunostruct/: train_Cancer_wFT.py
scripts/: build_cedar_cancer_splits.py  build_finetune_csvs.py  build_iedb_splits.py  check_af3_data.py  finetune_af3.sh  finetune_classifier.sh  keep_gpu.py  make_dimer_csv.sh  precompute_backbone.py  run_finetune_cedar_cancer_seeds.sh  run_finetune_seeds.sh  train_afdb.sh  train_afdb_unet.sh  train_dimer.sh  train_dimer_no_checkpoint.sh  train_dimer_no_checkpoint_priority.sh  train_dimer_test.sh  train_finetune_cedar_cancer.sh  train_finetune_cedar_cancer_fast.sh  train_finetune_iedb.sh  train_finetune_iedb_fast.sh
tests/: test_biochem.py  test_dataloader.py  test_environment.py  test_fullmodel.py  test_fullmodel_monomer.py  test_fullmodel_multimer.py  test_loss.py  test_loss_mono.py  test_loss_multi.py  test_structure.py
(+55 files in other folders)
